--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ tr.edit-row  td {
 #new_url #feedback .fail {
 	color:#f55;
 }
-#add-url {width:400px}
+#add-url {width:400px; position:relative; top:6px; max-width:400px;}
 td.url small a{
 	color:#bbc;
 }
